# ColorSwatch

./: CMakeLists.txt  ColorSwatch.qml  InputDialog.qml  README.md  color_palette_data.cpp  color_palette_data.h  color_palette_model.cpp  color_palette_model.h  color_palette_qsettings_repository.cpp  color_palette_qsettings_repository.h  icolor_palette_repository.h  iswatches_repository.h  main.cpp  main.qml  swatch_item.h  swatches_model.cpp  swatches_model.h  swatches_qsettings_repository.cpp  swatches_qsettings_repository.h
